fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@
 
 .calendar {
     width: 100%;
-    height: 92%;
+    height: 89%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -107,7 +107,6 @@
     flex-direction: row;
     height: 100%;
 }
-
 
 .day {
     background-color: white;
